# crypto_llm

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  test.py
crypto_llm/: app.py  chainer.py  loader.py  model.py  prompter.py  storage.py  vectorizer.py
crypto_llm/loader/: loader.py
data/sources/cmc/: pdf_correct_names.csv
